machine learning pluralsight

--- a/dataViz/bokeh/DataVizBokeh.ipynb
+++ b/dataViz/bokeh/DataVizBokeh.ipynb
@@ -34,7 +34,9 @@
    "id": "898b1704-032e-438f-9ad1-6aee62f9aa23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bokeh.plotting import figure, output_file, output_notebook, show"
+   ]
   }
  ],
  "metadata": {
